# azure-search-openai-demo

./: .gitignore  pyproject.toml
