[tool.poetry]
name = "your-package-name"
version = "0.1.0"
description = "A brief description of your package"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "*"

[tool.ruff]
target-version = "py38"
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501", "E701"] # line too long, multiple statements on one line
src = ["app/backend", "scripts"]

[tool.ruff.lint.isort]
known-local-folder = ["scripts"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["app/backend", "scripts"]

[tool.coverage.paths]
source = ["scripts", "app"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
check_untyped_defs = true
python_version = 3.9

[[tool.mypy.overrides]]
module = [
    "msal.*",
    "msgraph.*",
    "kiota_abstractions.*",
    "kiota.*"
]
ignore_missing_imports = true
